# SMBR-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Dockerfile  Makefile  README.md
bootloader/: katapult.config  memmap_default.ld
config/: Kconfig  import_kconfig.cmake
docs/enumeration/: enumeration_docs.md
docs/enumeration/imgs/: collision_boot.puml  collision_runtime.puml  successfull_boot.puml
scripts/: application_codes.py  auto_flash.sh  auto_single_flash.sh  prepare_deployment.sh  query_katapult_nodes.py  update_all_modules.py
source/: CMakeLists.txt  cli.cpp  cli.hpp  logger.cpp  logger.hpp  main.cpp  main.hpp
source/can_bus/: app_message.cpp  app_message.hpp  can_bus.cpp  can_bus.hpp  can_message.cpp  can_message.hpp  message_receiver.cpp  message_receiver.hpp  message_router.cpp  message_router.hpp  routing_table.hpp
source/components/: aerator.cpp  aerator.hpp  bottle_temperature.cpp  bottle_temperature.hpp  common_core.cpp  common_core.hpp  component.cpp  component.hpp  cuvette_pump.cpp  cuvette_pump.hpp  enumerator.cpp  enumerator.hpp  fans.cpp  fans.hpp  fluorometer.cpp  fluorometer.hpp  heater.cpp  heater.hpp  led_illumination.cpp  led_illumination.hpp  led_panel.cpp  led_panel.hpp  memory.cpp  memory.hpp  mini_oled.cpp  mini_oled.hpp  mixer.cpp  mixer.hpp  pumps.cpp  pumps.hpp  spectrophotometer.cpp  spectrophotometer.hpp
source/config/: FreeRTOSConfig.h  lv_conf.h
source/module_check/: IModuleCheck.hpp  board_temperature_check.cpp  board_temperature_check.hpp  bottle_bottom_measured_temp_check.cpp  bottle_bottom_measured_temp_check.hpp  bottle_bottom_sensor_temp_check.cpp  bottle_bottom_sensor_temp_check.hpp  bottle_temp_check.cpp  bottle_temp_check.hpp  bottle_top_measured_temp_check.cpp  bottle_top_measured_temp_check.hpp  bottle_top_sensor_temp_check.cpp  bottle_top_sensor_temp_check.hpp  core_load_check.cpp  core_load_check.hpp  core_temperature_check.cpp  core_temperature_check.hpp  fluorometer_detector_temp_check.cpp  fluorometer_detector_temp_check.hpp  fluorometer_emitor_temp_check.cpp  fluorometer_emitor_temp_check.hpp  heater_plate_temp_check.cpp  heater_plate_temp_check.hpp  led_temperature_check.cpp  led_temperature_check.hpp  limit_check.hpp  mixer_rpm_check.hpp  spectrophotometer_emitor_temp_check.cpp  spectrophotometer_emitor_temp_check.hpp
source/modules/: base_module.cpp  base_module.hpp  control_module.cpp  control_module.hpp  pump_module.cpp  pump_module.hpp  sensor_module.cpp  sensor_module.hpp
source/resources/: trendbit_logo.hpp
source/system_check/: ISystemCheck.hpp  board_temperature_check.cpp  board_temperature_check.hpp  led_temperature_check.cpp  led_temperature_check.hpp
source/threads/: can_thread.cpp  can_thread.hpp  common_thread.cpp  common_thread.hpp  fluorometer_thread.cpp  fluorometer_thread.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  mini_display_thread.cpp  mini_display_thread.hpp  module_check_thread.cpp  module_check_thread.hpp  spectrophotometer_thread.cpp  spectrophotometer_thread.hpp  system_check_thread.cpp  system_check_thread.hpp  test_thread.cpp  test_thread.hpp  usb_thread.cpp  usb_thread.hpp
source/tools/: motor_transfer_function.hpp
